--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,3 +1,13 @@
 .card {
-  box-shadow: 5px 5px 12px -9px #000000 #000000
+    box-shadow: 0 0 8px#6c14d0;
+    text-align: center; 
+}
+
+.btn{
+  background: linear-gradient(to right, #c72092, #6c14d0);
+  padding: 5px 15px;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  cursor: pointer;
 }
