--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -27,3 +27,14 @@
   justify-content: space-between;
   height: 80px;
 }
+
+.title{
+  font-size: 30px;
+  padding: 0.5rem;
+  font-weight: bold;
+  text-align: center;
+  background: linear-gradient(to right,#c72092, #6c14d0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
