--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,3 +1,8 @@
+body{
+    background-image: url(../../ecom2.PNG);
+    background-position: center;
+    background-size: cover;
+}
 .container{
     max-width: 400px;
     margin: 50px auto;
@@ -7,8 +12,17 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 h1{
-    text-align: center;
+    font-size: 30px;
+  padding: 0.5rem;
+  font-weight: bold;
+  text-align: center;
+  background: linear-gradient(to right,#c72092, #6c14d0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 
+}
+.note{
+    font-weight: bold;
 }
 .form-label{
     font-weight: bold;
